# concat-example

./: .clang-tidy  .travis.yml  CMakeLists.txt  build.sh
concat/: CMakeLists.txt
concat/concat/: concat.cpp  concat.hpp  main.cpp
